Wymuszone dodanie folderu templates z plikami HTML

--- a/templates/phoneapp.html
+++ b/templates/phoneapp.html
@@ -186,10 +186,7 @@
       return true;
     }
   </script>
-<!-- poprawka: wersja z folderu templates -->
-
-
-
+<!-- wersja zatwierdzona -->
 
 </body>
 </html>
